--- a/arch/riscv/configs/starfive_visionfive2_defconfig
+++ b/arch/riscv/configs/starfive_visionfive2_defconfig
@@ -74,15 +74,23 @@ CONFIG_NETLINK_DIAG=y
 CONFIG_CAN=y
 CONFIG_IPMS_CAN=y
 CONFIG_BT=y
+CONFIG_BT_INTEL=y
 CONFIG_BT_RFCOMM=y
 CONFIG_BT_RFCOMM_TTY=y
 CONFIG_BT_BNEP=y
 CONFIG_BT_BNEP_MC_FILTER=y
 CONFIG_BT_BNEP_PROTO_FILTER=y
+CONFIG_BT_HCIBTUSB=y
 CONFIG_BT_HCIUART=y
 CONFIG_BT_HCIUART_H4=y
+CONFIG_BT_LE=y
+CONFIG_BT_DEBUGFS=y
+CONFIG_BT_HCIBTUSB_RTL=y
+CONFIG_BT_RTL8852BU=y
 CONFIG_CFG80211=y
 CONFIG_MAC80211=y
+CONFIG_RFKILL=y
+CONFIG_RFKILL_GPIO=y
 CONFIG_NET_9P=y
 CONFIG_NET_9P_VIRTIO=y
 CONFIG_PCI=y
@@ -151,8 +159,11 @@ CONFIG_IWLMVM=y
 CONFIG_HOSTAP=y
 # CONFIG_RTL_CARDS is not set
 CONFIG_USB_WIFI_ECR6600U=y
+CONFIG_INPUT=y
 CONFIG_INPUT_EVDEV=y
-# CONFIG_INPUT_KEYBOARD is not set
+CONFIG_INPUT_KEYBOARD=y
+CONFIG_KEYBOARD_GPIO=y
+CONFIG_KEYBOARD_GPIO_POLLED=y
 # CONFIG_INPUT_MOUSE is not set
 CONFIG_INPUT_TOUCHSCREEN=y
 CONFIG_TOUCHSCREEN_GOODIX=y
@@ -188,6 +199,8 @@ CONFIG_POWER_RESET=y
 CONFIG_POWER_RESET_GPIO_RESTART=y
 CONFIG_POWER_RESET_SYSCON=y
 CONFIG_POWER_RESET_SYSCON_POWEROFF=y
+CONFIG_POWER_SUPPLY=y
+CONFIG_CHARGER_SC89890H=y
 CONFIG_SENSORS_SFCTEMP=y
 CONFIG_THERMAL=y
 CONFIG_THERMAL_WRITABLE_TRIPS=y
@@ -197,6 +210,7 @@ CONFIG_WATCHDOG=y
 CONFIG_WATCHDOG_SYSFS=y
 CONFIG_STARFIVE_WATCHDOG=y
 CONFIG_REGULATOR=y
+CONFIG_REGULATOR_FIXED_VOLTAGE=y
 CONFIG_REGULATOR_AXP15060=y
 # CONFIG_MEDIA_CEC_SUPPORT is not set
 CONFIG_MEDIA_SUPPORT=y
@@ -204,7 +218,9 @@ CONFIG_MEDIA_USB_SUPPORT=y
 CONFIG_USB_VIDEO_CLASS=y
 CONFIG_V4L_PLATFORM_DRIVERS=y
 CONFIG_VIDEO_STF_VIN=y
-CONFIG_VIN_SENSOR_IMX219=y
+# CONFIG_VIN_SENSOR_IMX219=y
+CONFIG_VIN_SENSOR_OV5640=y
+CONFIG_VIDEO_GC02M2=y
 CONFIG_DRM_PANEL_JADARD_JD9365DA_H3=y
 CONFIG_DRM_VERISILICON=y
 CONFIG_STARFIVE_INNO_HDMI=y
@@ -215,6 +231,7 @@ CONFIG_FB=y
 CONFIG_BACKLIGHT_CLASS_DEVICE=y
 CONFIG_FRAMEBUFFER_CONSOLE=y
 CONFIG_SOUND=y
+CONFIG_SND_SOC_ES8316=y
 CONFIG_SND=y
 CONFIG_SND_USB_AUDIO=y
 CONFIG_SND_SOC=y
@@ -223,6 +240,7 @@ CONFIG_SND_SOC_STARFIVE=y
 CONFIG_SND_SOC_STARFIVE_PWMDAC=y
 CONFIG_SND_SOC_STARFIVE_I2S=y
 CONFIG_SND_SOC_AC108=y
+CONFIG_SND_SOC_ES8316=y
 CONFIG_SND_SOC_WM8960=y
 CONFIG_SND_SIMPLE_CARD=y
 CONFIG_USB=y
@@ -259,6 +277,8 @@ CONFIG_DW_AXI_DMAC=y
 CONFIG_DMATEST=y
 # CONFIG_VIRTIO_MENU is not set
 # CONFIG_VHOST_MENU is not set
+CONFIG_STAGING=y
+CONFIG_RTL8852BU=y
 CONFIG_GOLDFISH=y
 CONFIG_STARFIVE_TIMER=y
 CONFIG_MAILBOX=y
@@ -338,3 +358,4 @@ CONFIG_RCU_EQS_DEBUG=y
 # CONFIG_FTRACE is not set
 # CONFIG_RUNTIME_TESTING_MENU is not set
 CONFIG_MEMTEST=y
+CONFIG_BATTERY_CW2015=y
