--- a/arch/riscv/boot/dts/starfive/jh7110-visionfive-v2.dtsi
+++ b/arch/riscv/boot/dts/starfive/jh7110-visionfive-v2.dtsi
@@ -237,6 +237,58 @@
 		};
 	};
 
+	ov5640_pins: ov5640_pins {
+		ov5640_pins-pwdn {
+			starfive,pins = <PAD_GPIO22>;
+			starfive,pinmux = <PAD_GPIO22_FUNC_SEL 0>;
+			starfive,pin-ioconfig = <IO(GPIO_IE(1))>;
+			starfive,pin-gpio-dout = <GPO_HIGH>;
+			starfive,pin-gpio-doen = <OEN_LOW>;
+		};
+
+		ov5640_pins-rst {
+			starfive,pins = <PAD_GPIO34>;
+			starfive,pinmux = <PAD_GPIO34_FUNC_SEL 0>;
+			starfive,pin-ioconfig = <IO(GPIO_IE(1))>;
+			starfive,pin-gpio-dout = <GPO_HIGH>;
+			starfive,pin-gpio-doen = <OEN_LOW>;
+		};
+
+		ov5640_pins-sw {
+			starfive,pins = <PAD_GPIO53>;
+			starfive,pinmux = <PAD_GPIO53_FUNC_SEL 0>;
+			starfive,pin-ioconfig = <IO(GPIO_IE(1))>;
+			starfive,pin-gpio-dout = <GPO_HIGH>;
+			starfive,pin-gpio-doen = <OEN_LOW>;
+		};
+	};
+
+	gc02m2_pins: gc02m2_pins {
+		gc02m2pins-pwdn {
+			starfive,pins = <PAD_GPIO25>;
+			starfive,pinmux = <PAD_GPIO25_FUNC_SEL 0>;
+			starfive,pin-ioconfig = <IO(GPIO_IE(1))>;
+			starfive,pin-gpio-dout = <GPO_HIGH>;
+			starfive,pin-gpio-doen = <OEN_LOW>;
+		};
+
+		gc02m2_pins-rst {
+			starfive,pins = <PAD_GPIO33>;
+			starfive,pinmux = <PAD_GPIO33_FUNC_SEL 0>;
+			starfive,pin-ioconfig = <IO(GPIO_IE(1))>;
+			starfive,pin-gpio-dout = <GPO_HIGH>;
+			starfive,pin-gpio-doen = <OEN_LOW>;
+		};
+
+		gc02m2_pins-sw {
+			starfive,pins = <PAD_GPIO53>;
+			starfive,pinmux = <PAD_GPIO53_FUNC_SEL 0>;
+			starfive,pin-ioconfig = <IO(GPIO_IE(1))>;
+			starfive,pin-gpio-dout = <GPO_LOW>;
+			starfive,pin-gpio-doen = <OEN_LOW>;
+		};
+	};
+
 	pwmdac0_pins: pwmdac0-pins {
 		pwmdac0-pins-left {
 			starfive,pins = <PAD_GPIO33>;
@@ -564,6 +616,7 @@
 	};
 
 	touchscreen@14 {
+		status = "okay";
 		compatible = "goodix,gt911";
 		reg = <0x14>;
 		irq-gpios = <&gpio 30 GPIO_ACTIVE_HIGH>;
@@ -729,20 +782,44 @@
 	// 	};
 	// };
 
-	ov5640: ov5640@3c {
+	// ov5640: ov5640@3c {
+	// 	status = "okay";
+	// 	compatible = "ovti,ov5640";
+	// 	reg = <0x3c>;
+	// 	clocks = <&clk_ext_camera>;
+	// 	clock-names = "xclk";
+	// 	reset-gpios = <&gpio 34 GPIO_ACTIVE_LOW>;
+	// 	powerdown-gpios = <&gpio 22 GPIO_ACTIVE_LOW>;
+	// 	sw-gpios = <&gpio 53 GPIO_ACTIVE_HIGH>;
+	// 	pinctrl-names = "default";
+	// 	pinctrl-0 = <&ov5640_pins>;
+	// 	rotation = <0>;
+	// 	orientation = <1>; //CAMERA_ORIENTATION_BACK
+
+	// 	port {
+	// 		/* CSI2 bus endpoint */
+	// 		ov5640_to_csi2rx: endpoint {
+	// 			remote-endpoint = <&csi2rx_from_ov5640>;
+	// 			bus-type = <4>;      /* MIPI CSI-2 D-PHY */
+	// 			data-lanes = <2 1>;
+	// 			lane-polarities = <0 0 0>;
+	// 			link-frequencies = /bits/ 64 <456000000>;
+	// 		};
+	// 	};
+	// };
+
+	ov5640: camera@3c {
 		status = "okay";
 		compatible = "ovti,ov5640";
+		pinctrl-names = "default";
+		pinctrl-0 = <&ov5640_pins>;
 		reg = <0x3c>;
 		clocks = <&clk_ext_camera>;
 		clock-names = "xclk";
-		reset-gpios = <&gpio 34 1>;
-		powerdown-gpios = <&gpio 22 1>;
+		powerdown-gpios = <&gpio 22 GPIO_ACTIVE_HIGH>;
+		reset-gpios = <&gpio 34 GPIO_ACTIVE_LOW>;
 		sw-gpios = <&gpio 53 GPIO_ACTIVE_HIGH>;
-		//DOVDD-supply = <&v2v8>;
-		// pinctrl-names = "default";
-		// pinctrl-0 = <&csi_pins>;
 		rotation = <0>;
-		orientation = <1>; //CAMERA_ORIENTATION_BACK
 
 		port {
 			/* CSI2 bus endpoint */
@@ -759,6 +836,8 @@
 	gc02m2: gc02m2@37 {
 		status = "disabled";
 		compatible = "galaxycore,gc02m2";
+		pinctrl-names = "default";
+		pinctrl-0 = <&gc02m2_pins>;
 		reg = <0x37>;
 		clocks = <&clk_ext_camera>;
 		clock-names = "xvclk";
@@ -921,7 +1000,7 @@
 &spi0 {
 	pinctrl-names = "default";
 	pinctrl-0 = <&ssp0_pins>;
-	status = "okay";
+	status = "disabled";
 
 	spi_dev0: spi@0 {
 		compatible = "rohm,dh2228fv";
