--- a/arch/riscv/configs/starfive_visionfive2_defconfig
+++ b/arch/riscv/configs/starfive_visionfive2_defconfig
@@ -219,8 +219,9 @@ CONFIG_USB_VIDEO_CLASS=y
 CONFIG_V4L_PLATFORM_DRIVERS=y
 CONFIG_VIDEO_STF_VIN=y
 # CONFIG_VIN_SENSOR_IMX219=y
-CONFIG_VIN_SENSOR_OV5640=y
+# CONFIG_VIN_SENSOR_OV5640=y
 CONFIG_VIDEO_GC02M2=y
+CONFIG_VIDEO_OV5640=y
 CONFIG_DRM_PANEL_JADARD_JD9365DA_H3=y
 CONFIG_DRM_VERISILICON=y
 CONFIG_STARFIVE_INNO_HDMI=y
